--- a/css/home.css
+++ b/css/home.css
@@ -142,8 +142,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    height: 90vh;
-    padding:5vh 10% 5vh 10%;
+    height: 80vh;
+    padding:10vh 10% 10vh 10%;
 }
 
 
