--- a/css/skills.css
+++ b/css/skills.css
@@ -9,6 +9,7 @@
   justify-content: center;
  color: var(--color-body);
  min-height: 100vh;
+ padding: 20% 0 20% 0;
  vertical-align: middle;
  align-items: center;
  text-align: center;
@@ -81,6 +82,12 @@ line-height: 1.4rem;
   font-weight: 500;
  }
 
+
+ @media screen and (min-width:500px){
+  .skillsContainer{
+    padding: 0;
+  }
+ }
 
 
 
